# sydraw

./: .gitignore  .readthedocs.yaml  LICENSE.md  Makefile  README.md  coxswain.py  mkdocs.yml  playground.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: develop.yml  master.yml
datafact/: coxswain.py  line_maker.py  maker.py  modelgen.py
datafact.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datafact/makers/: line_maker.py  maker.py
datafact/utils/: coxswain.py  utils.py
docs/: index.md  parametric_models.md  requirements.txt
docs/about/: changelog.md
docs/usage/: output_folder_structure.md  parametric_models.md  point_generation.md  terminology.md
notebooks/: overview.ipynb
sydraw/: gui.py  linalg.py  pipe.yml  synth.py
sydraw/package/: setup.py
sydraw/package/sydraw/: __main__.py  gui.py  linalg.py  synth.py
sydraw/package/sydraw/utils/: cameraops.py  config.py  utils.py
sydraw/package/syndalib.egg-info/: PKG-INFO
sydraw/package/tests/: test_linalg.py  test_synth.py
sydraw/utils/: cameraops.py  utils.py
syndalib/: README.md  drawer.py  linalg.py  plot.py  pyproject.toml  syn2d.py  synth.py
syndalib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
syndalib/makers/: conic_maker.py
syndalib/package/: linalg.py  setup.py  synth.py
syndalib/package/dcr.egg-info/: SOURCES.txt
syndalib/package/syndalib/: synth.py
syndalib/package/syndalib.egg-info/: SOURCES.txt  top_level.txt
syndalib/package/syndalib/makers/: circle_maker.py  conic_maker.py  ellipse_maker.py  line_maker.py  maker.py
syndalib/package/utils/: utils.py
syndalib/syndalib/: __main__.py  cli.py
syndalib/syndalib/src/: linalg.py  synth.py
syndalib/syndalib/src/utils/: cameraops.py  utils.py
syndalib/syndalib/tests/: __init__.py  test_linalg.py  test_synth.py
syndalib/utils/: config.py
tests/: __init__.py  syndalib_test.py  test_drawer.py  test_linalg.py  test_modelgen.py  test_plot.py  test_synth.py  test_utils.py
